--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,11 @@
             <artifactId>spigot-api</artifactId>
             <version>1.15.2-R0.1-SNAPSHOT</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.39.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -109,5 +112,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
