Add custom user settings to Bot
It's now possible to set custom behavior for the bot per user.
For this, a small database for user settings has been added.
The settings can be set by users through discord commands.
Specifically it's possible to set a custom message and switch between manual and automatic notification mode. In manual mode no notification is sent when a user goes live. Instead notifications can be dispatched via the send_notification command.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 guildId:
 channelId:
 botToken:
-liveMessage: {user} hat einen Stream gestartet! <3
+liveMessage: {user.name} hat einen Stream gestartet! <3
 onlineStatus: ONLINE
 activityType: watching
 activity: all your streams!
