Make Bot standalone
Bot is not a minecraft plugin anymore
Path to user DB is now configurable
Default config is created when no file can be found

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,8 @@
-guildId:
-channelId:
-botToken:
+guildId: INSERT-DISCORD-SERVER-ID-HERE
+channelId: INSERT-NOTIFICATION-CHANNEL-ID-HERE
+botToken: INSERT-TOKEN-HERE
 liveMessage: {user.name} hat einen Stream gestartet! <3
 onlineStatus: ONLINE
 activityType: watching
 activity: all your streams!
+userSettings: notification.db
